--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -18,7 +18,7 @@
         $(document).ready(function(){
             var errorMessage = /*[[${errorMessage}]]*/"";
             if(errorMessage != null){
-                alert(errorMessage);
+                // alert(errorMessage);
             }
         });
     </script>
